completed 90% of features
Needs a lot of cleaning up and security fixes

--- a/EquipmentRental/EquipmentRental.Web/Views/Shared/_Layout.cshtml
+++ b/EquipmentRental/EquipmentRental.Web/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                                     <a class="nav-link text-dark" asp-controller="Equipment" asp-action="Browse">Browse</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="RentalTransaction" asp-action="MyRentals">My Rentals</a>
+                                    <a class="nav-link text-dark" asp-controller="MyRentals" asp-action="Index">My Rentals</a>
                                 </li>
                                 <li class="nav-item">
                                     <span class="nav-link text-info">Welcome @name!</span>
